# umep-rust

./: .gitignore  .pre-commit-config.yaml  API_FLOW.md  CHANGES.md  CITATION.cff  CLAUDE.md  COMPLETED_PHASE3_TASKS.md  LOGGING_IMPLEMENTATION_COMPLETE.md  MODERNIZATION_PLAN.md  MODERNIZATION_UPDATE_2026-01-23.md  PHASE3_AUTOSAVE_COMPLETE.md  PHASE3_SUMMARY.md  README.md  ROADMAP.md  SESSION_SUMMARY.md  TODO.md  VALIDATION.md  mkdocs.yml  pyproject.toml  test_simplified_api.py
.archived_tests/: test_api_exact_parity.py
.archived_tests/archived/: test_api_comparison.py
.devcontainer/: devcontainer.json
.github/workflows/: build-qgis-plugin.yml  docs.yml  python-publish.yml  test.yml
demos/: athens-demo.py  bilbao-demo.py  profile_athens.py  profile_timeseries.py  small_nbhd_walls.py  solweig_gbg_test.py
demos/data/Goteborg_SWEREF99_1200/: CITATION.md  configsolweig.ini  pois.gpkg
demos/data/athens/: CDSM_1m.tif  CDSM_2m.tif  DEM.tif  DSM_1m.tif  DSM_2m.tif  configsolweig.ini
demos/data/bilbao/: BDSM.tif  CDSM.tif  DEM.tif  bilbao_2021.epw
demos/data/small_nbhd/: dsm_clipped.tif
docs/: PARAMS_MIGRATION.md  PARAMS_SIMPLE.md  RUN_METADATA.md  SOLWEIG_VALIDATION_RESEARCH.md  index.md
docs/api/: dataclasses.md  errors.md  functions.md  index.md  io.md  project-api.md
docs/development/: architecture.md  contributing.md  gpu-execution-plan.md  roadmap.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: basic-usage.md  geotiffs.md  qgis-plugin.md  thermal-comfort.md  timeseries.md
docs/physics/: ground-temperature.md  gvf.md  index.md  pet.md  radiation.md  shadows.md  svf.md  tmrt.md  utci.md  validation.md
docs/tutorials/: 01-athens-quickstart.ipynb  02-timeseries-analysis.ipynb  03-thermal-comfort.ipynb
pysrc/solweig/: __init__.py  _compat.py  _orchestration.py  api.py  buffers.py  bundles.py  cache.py  computation.py  config.py  configs.py  constants.py  errors.py  io.py  loaders.py  logging.py  metadata.py  models.py  output_async.py  parametersforsolweig.json  postprocess.py  progress.py  runner.py  shadows.py  solweig_logging.py  solweig_runner_rust.py  summary.py  svf.py  tiles.py  tiling.py  timeseries.py  utils.py  walls.py
pysrc/solweig/algorithms/: Kup_veg_2015a.py  PET_calculations.py  Perez_v3.py  UTCI_calculations.py  create_patches.py  cylindric_wedge.py  patch_radiation.py  sunlit_shaded_patches.py  wall_surface_temperature.py  wallalgorithms.py
pysrc/solweig/components/: __init__.py  ground.py  gvf.py  radiation.py  shadows.py  svf_resolution.py  tmrt.py
pysrc/solweig/data/: default_materials.json  default_params.json  physics_defaults.json
pysrc/solweig/functions/: daily_shading.py  solweig.py
pysrc/solweig/hybrid/: svf.py
pysrc/solweig/models/: __init__.py  config.py  precomputed.py  results.py  state.py  surface.py  weather.py
pysrc/solweig/physics/: clearnessindex_2013b.py  create_patches.py  cylindric_wedge.py  daylen.py  diffusefraction.py  morphology.py  patch_radiation.py  sun_distance.py  sun_position.py  wallalgorithms.py
pysrc/umepr/: __init__.py  class_configs.py  shadow_generator_algorithm_rust.py  shadows.py  skyviewfactor_algorithm_rust.py  solweig_config.py  solweig_runner_rust.py  svf.py
pysrc/umepr/functions/: dailyshading_rust.py  solweig.py  solweig_runner.py  solweig_runner_core.py  solweig_runner_qgis.py  svf_functions_rust.py
pysrc/umepr/hybrid/: gvf.py  solweig.py  solweig_hybrid.py
qgis_plugin/: README.md  build_plugin.py
qgis_plugin/solweig_qgis/: __init__.py  _make_icon.py  metadata.txt  provider.py
qgis_plugin/solweig_qgis/algorithms/: __init__.py  base.py
qgis_plugin/solweig_qgis/utils/: __init__.py  converters.py  parameters.py
rust/: Cargo.toml
rust/src/: emissivity_models.rs  ground.rs  gvf.rs  gvf_geometry.rs  lib.rs  morphology.rs  patch_radiation.rs  perez.rs  pet.rs  pipeline.rs  shadowing.rs  sky.rs  skyview.rs  sun.rs  sunlit_shaded_patches.rs  tmrt.rs  utci.rs  vegetation.rs  wall_aspect.rs
rust/src/gpu/: aniso_gpu.rs  aniso_lside_dirs.wgsl  anisotropic_sky.wgsl  gvf_cached.wgsl  gvf_gpu.rs  mod.rs  shadow_gpu.rs  shadow_propagation.wgsl  shadow_to_bitpack.wgsl  shadow_to_u8.wgsl  svf_accumulation.wgsl
scripts/: benchmark_shadows.py  profile_memory.py
specs/: OVERVIEW.md  ground_temperature.md  gvf.md  pet.md  radiation.md  runtime-contract.md  shadows.md  svf.md  technical.md  tmrt.md  utci.md
tests/: README.md  conftest.py  qgis_mocks.py  test_api.py  test_api_visual_comparison.py  test_buffer_pool.py  test_docs_consistency.py  test_errors.py  test_io.py  test_orchestration.py  test_progress.py  test_qgis_base.py  test_qgis_converters.py  test_shadow_cache.py  test_svf_memmap.py  test_tiling_integration.py  test_timeseries.py  test_wall_material.py
tests/archived/: test_api_vs_full_runner.py
tests/benchmarks/: __init__.py  test_memory_benchmark.py  test_performance_matrix_benchmark.py  test_tiling_benchmark.py
tests/data/athens/: CDSM.tif  DSM.tif  (+2 more)
tests/demos/: athens-demo.py  small_nbhd_walls.py  solweig_gbg_test.py
tests/golden/: README.md  REPORT.md  __init__.py  generate_fixtures.py  generate_report.py  test_golden_anisotropic_sky.py  test_golden_ground_temp.py  test_golden_gvf.py  test_golden_pet.py  test_golden_radiation.py  test_golden_shadows.py  test_golden_svf.py  test_golden_tmrt.py  test_golden_utci.py  test_golden_wall_geometry.py  test_golden_walls.py
tests/rustalgos/: test_config_shadows.ini  test_config_solweig.ini  test_config_solweig_old_fmt.ini  test_rustalgos.py
tests/spec/: __init__.py  test_aniso_gpu_parity.py  test_anisotropic_pipeline.py  test_bitpacking.py  test_ground_properties.py  test_gvf_properties.py  test_low_sun_angles.py  test_perez_parity.py  test_pet.py  test_radiation_formulas.py  test_shadows.py  test_svf.py  test_svf_core_api.py  test_thermal_comfort.py  test_umep_parity.py  test_utci.py
tests/validation/: test_poi_sweep_all_sites.py  test_validation_gustav_adolfs.py  test_validation_gvc.py  test_validation_kolumbus.py  test_validation_kronenhuset.py  test_validation_montpellier.py
(+122 files in other folders)
