[project]
name = "solweig"
version = "0.1.0b55"
description = "High-performance SOLWEIG urban microclimate model (Rust + Python)"
readme = "README.md"
requires-python = ">=3.11, <3.14"
license = { text = "AGPL-3.0" }
keywords = [
    "python3",
    "geographical-information-system",
    "spatial-data",
    "spatial-data-analysis",
    "urban-climate",
    "urban-heat-island",
    "urban-meteorology",
    "urban-microclimate",
    "urban-planning",
    "urban-sustainability",
    "urban-thermal-comfort",
    "urban-thermal-environment",
    "urban-thermal-mapping",
    "urban-thermal-modelling",
    "urban-thermal-simulation",
    "urban-thermal-sustainability",
]
authors = [{ name = "UMEP Developers" }]
maintainers = [{ name = "UMEP Developers" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.26.0",  # QGIS 4 master ships 1.26.4
    "pyproj>=3.7.0",  # Bundled with QGIS
    "shapely>=2.0.4", # Bundled with QGIS
]

[project.optional-dependencies]
# Full installation with all features (recommended for standalone use)
# uv sync --extra full
full = [
    "geopandas>=1.0.1", # POI/WOI point-of-interest analysis
    "rasterio>=1.3.0",  # Fast raster I/O (pip-installable, falls back to GDAL in QGIS)
    "tqdm>=4.67.1",     # Terminal progress bars
    "pillow>=9.0.0",    # Preview PNG generation for GeoTIFFs
]
# QGIS plugin mode - uses bundled GDAL, QGIS progress bars
qgis = [
    # No additional dependencies - uses bundled OSGeo4W packages
    # geopandas: optional, only for POI/WOI features
    # rasterio: not needed, uses GDAL backend
    # tqdm: not needed, uses QGIS QgsProcessingFeedback
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "pysrc"
module-name = 'solweig.rustalgos'
features = ["pyo3/extension-module", "pyo3/abi3-py311", "gpu"]
include = ["LICENSE"]

[tool.setuptools]
packages = ["solweig"]

[dependency-groups]
test = [
    "pytest>=7.2.0",
    "pandas-stubs>=1.5.2.221213",
    "memory-profiler>=0.61.0",
    "umep>=0.0.1a18",             # Cross-checking tests against reference implementation
    "scipy>=1.13.0",              # Golden tests (ndimage)
    # Full optional dependencies needed for test coverage
    "geopandas>=1.0.1", # POI/WOI point-of-interest analysis
    "rasterio>=1.3.0",  # Fast raster I/O (falls back to GDAL)
    "tqdm>=4.67.1",     # Terminal progress bars
    "pillow>=9.0.0",    # Preview PNG generation for GeoTIFFs
]
dev = [
    "jupyterlab>=3.5.2",
    "jupyter>=1.0.0",
    "maturin>=1.8.3",
    "pip>=23.2",
    "ruff>=0.5.1",
    "poethepoet>=0.29.0",
    "ty>=0.0.12",
    "pre-commit>=4.3.0",
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-jupyter>=0.25.0",
    "matplotlib>=3.7.0",
    "ipykernel>=6.31.0",
]
# QGIS 4 compatibility testing - uses GDAL backend, no rasterio/geopandas
# Tests the minimal dependency set that works in QGIS 4 / Qt6 Python environment
qgis-compat = [
    "numpy>=1.26.0",
    "pandas>=2.2.2",
    # Note: GDAL is a system package in QGIS/OSGeo4W, not pip-installed.
    # In CI, install matching version separately: uv pip install gdal==$(gdal-config --version)
    "pyproj>=3.7.0",
    "shapely>=2.0.4",
    # Note: scipy NOT bundled in QGIS — only needed for dev/golden tests
    # Note: tqdm not bundled in OSGeo4W - progress.py falls back to QGIS progress bars
    # Note: geopandas not bundled - POI/WOI features unavailable without manual install
    "pytest>=7.2.0",  # Testing
    "maturin>=1.8.3", # Build Rust extension
]

[project.urls]
homepage = "https://github.com/UMEP-dev/solweig"
documentation = "https://umep-dev.github.io/solweig/"
repository = "https://github.com/UMEP-dev/solweig"

[tool.poe.tasks]
verify_project = { shell = "ruff format && ruff check --fix && ty check pysrc/ tests/ demos/ scripts/ qgis_plugin/ && pytest ./tests" }
lint = { shell = "ruff format && ruff check --fix" }
typecheck = { shell = "ty check pysrc/ tests/ demos/ scripts/ qgis_plugin/" }
test_quick = { shell = "pytest tests/ -m 'not slow' -x -q" }
test_full = { shell = "pytest tests/ -x -q" }
test_benchmarks = { shell = "pytest tests/benchmarks/ -x -q" }
test_gpu_gates = { shell = "pytest tests/spec/test_svf.py tests/spec/test_svf_core_api.py tests/spec/test_aniso_gpu_parity.py -q && pytest tests/test_tiling_integration.py -k 'multitile_vs_nontiled_comparison or anisotropic_tiled_vs_nontiled' -q" }
test_gpu_perf_gate = { shell = "pytest tests/benchmarks/test_tiling_benchmark.py -q" }
docs = { shell = "mkdocs serve" }
docs_build = { shell = "mkdocs build --strict" }
notebooks = { shell = "jupyter nbconvert --to notebook --execute docs/tutorials/*.ipynb --inplace" }

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# EPW test data contains literal long lines matching real file format
"tests/test_io.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
console_output_style = "count"
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
addopts = "-s"
markers = [
    "slow: marks tests as slow (full SOLWEIG computation, deselect with '-m \"not slow\"')",
    "validation: marks tests requiring external validation datasets (deselect with '-m \"not validation\"')",
]

[tool.ty.rules]
# Ignore unresolved imports for external/optional modules that ty cannot resolve
# (rustalgos is a Rust extension, osgeo/qgis are optional dependencies)
unresolved-import = "ignore"
# numpy stub overloads are too strict for np.nanmean / np.mean on ndarray
no-matching-overload = "ignore"
