[package]
name = "rustalgos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
maturin = "1.5"
numpy = "0.24.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.10.0"
ndarray-stats = "0.6.0"
