[package]
name = "rustalgos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py311"] }
numpy = "0.24.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.10.0"
wgpu = { version = "27.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.24", optional = true, features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_Dxgi"], optional = true }

[features]
default = ["gpu"]
gpu = ["wgpu", "pollster", "bytemuck", "windows"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
